Fix several speelling errors
Reviewed by:	swildner, zrj

--- a/lib/libcipher/cipher.3
+++ b/lib/libcipher/cipher.3
@@ -149,7 +149,7 @@ as an unencumbered replacement for the U.S.-only
 .Nx
 libcrypt encryption
 library.
-Users should be aware that this code (and programs staticly linked with it)
+Users should be aware that this code (and programs statically linked with it)
 may not be exported from the U.S., although it apparently can be imported.
 .Sh AUTHORS
 .An David Burren Aq davidb@werj.com.au
