--- a/lib/libpthread/pthread.3
+++ b/lib/libpthread/pthread.3
@@ -427,7 +427,7 @@ Set the process shared setting for the read/write lock attribute object.
 .Ft int
 .Fn pthread_barrier_destroy "pthread_barrier_t *barrier"
 .Xc
-Delete a barrier and its ressources.
+Delete a barrier and its resources.
 .It Xo
 .Ft int
 .Fn pthread_barrier_init "pthread_barrier_t *barrier" "const pthread_barrierattr_t *attr" "unsigned count"
