--- a/lib/libpthread/pthread_mutex_getprioceiling.3
+++ b/lib/libpthread/pthread_mutex_getprioceiling.3
@@ -74,7 +74,7 @@ function shall return the current priority ceiling of the mutex.
 The
 .Fn pthread_mutex_setprioceiling
 function shall either lock the mutex if it is unlocked, or block until
-it can sucessfully lock the mutex, then it shall change the mutex's priority
+it can successfully lock the mutex, then it shall change the mutex's priority
 ceiling and release the mutex.
 When the change is successful, the previous value of the priority ceiling
 shall be returned
