--- a/test/interbench/interbench.8
+++ b/test/interbench/interbench.8
@@ -197,7 +197,7 @@ to catch up usually by these sorts of applications.
 The results pessimise quite a lot what happens in real world terms because they
 ignore the reality of buffering, but this allows us to pick up subtle 
 differences more readily. In terms of what would be noticed by the end user,
-dropping deadlines would make noticable clicks in audio, subtle visible frame
+dropping deadlines would make noticeable clicks in audio, subtle visible frame
 time delays in video, and loss of "smooth" movement in X. Dropping desired cpu
 would be much more noticeable with audio skips, missed video frames or jerks
 in window movement under X. The magnitude of these would be best represented by
