--- a/usr.bin/indent/indent.1
+++ b/usr.bin/indent/indent.1
@@ -487,7 +487,7 @@ The
 .Nm
 utility understands a substantial amount about the syntax of C, but it
 has a `forgiving' parser.
-It attempts to cope with the usual sorts of incomplete and misformed syntax.
+It attempts to cope with the usual sorts of incomplete and malformed syntax.
 In particular, the use of macros like:
 .Pp
 .Dl #define forever for(;;)
