--- a/usr.bin/login/login.1
+++ b/usr.bin/login/login.1
@@ -28,7 +28,7 @@
 .\"	@(#)login.1	8.2 (Berkeley) 5/5/94
 .\" $FreeBSD: src/usr.bin/login/login.1,v 1.33 2007/11/30 11:02:36 philip Exp $
 .\"
-.Dd September 13, 2006
+.Dd December 31, 2017
 .Dt LOGIN 1
 .Os
 .Sh NAME
@@ -142,7 +142,7 @@ configuration file
 .Xr csh 1 ,
 .Xr newgrp 1 ,
 .Xr passwd 1 ,
-.Xr rlogin 1 ,
+.Xr rlogin 1 Pq Pa net/bsdrcmds ,
 .Xr getpass 3 ,
 .Xr fbtab 5 ,
 .Xr login.access 5 ,
