--- a/share/man/man4/termios.4
+++ b/share/man/man4/termios.4
@@ -28,7 +28,7 @@
 .\"	@(#)termios.4	8.4 (Berkeley) 4/19/94
 .\" $FreeBSD: src/share/man/man4/termios.4,v 1.12.2.9 2001/12/17 11:30:12 ru Exp $
 .\"
-.Dd April 19, 1994
+.Dd December 31, 2017
 .Dt TERMIOS 4
 .Os
 .Sh NAME
@@ -59,7 +59,7 @@ seldom open these files; they are opened by special programs, such
 as
 .Xr getty 8
 or
-.Xr rlogind 8 ,
+.Xr rlogind 8 Pq Pa net/bsdrcmds ,
 and become
 an application's standard input, output, and error files.
 .Ss Job Control in a Nutshell
