--- a/lib/librefuse/refuse.3
+++ b/lib/librefuse/refuse.3
@@ -1,6 +1,6 @@
 .\"	$NetBSD: refuse.3,v 1.7 2007/11/08 17:08:46 pooka Exp $
 .\"
-.\" Copyright © 2007 Alistair Crooks.  All rights reserved.
+.\" Copyright (c) 2007 Alistair Crooks.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
