ipfw: Support all possible ICMP types.

--- a/sbin/ipfw/ipfw.8
+++ b/sbin/ipfw/ipfw.8
@@ -1,7 +1,7 @@
 .\"
 .\" $FreeBSD: src/sbin/ipfw/ipfw.8,v 1.63.2.33 2003/02/04 01:36:02 brueffer Exp $
 .\"
-.Dd October 15, 2017
+.Dd January 6, 2018
 .Dt IPFW 8
 .Os
 .Sh NAME
@@ -926,7 +926,7 @@ Matches ICMP packets whose ICMP type is in the list
 .Ar types .
 The list may be specified as any combination of ranges or
 individual types separated by commas.
-The supported ICMP types are:
+Commonly used ICMP types are:
 .Pp
 echo reply
 .Pq Cm 0 ,
