--- a/share/man/man4/acpi.4
+++ b/share/man/man4/acpi.4
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/acpi.4,v 1.61.8.1 2009/04/15 03:14:26 kensmith Exp $
 .\"
-.Dd January 8, 2016
+.Dd January 15, 2018
 .Dt ACPI 4
 .Os
 .Sh NAME
@@ -47,12 +47,16 @@ other features.
 ACPI core support is provided by the ACPICA reference implementation
 from Intel.
 .Pp
-Note that the
+The
 .Nm
-driver is automatically loaded by the
-.Xr loader 8 ,
-and should only be
-compiled into the kernel on platforms where ACPI is mandatory.
+driver is usually compiled into the kernel, and it is automatically loaded
+by the
+.Xr loader 8
+if it is not in the kernel configuration file.
+The loader menu provides a menu item to boot without ACPI.
+See also
+.Sx DISABLING ACPI
+below.
 .Sh SYSCTL VARIABLES
 The
 .Nm
