--- a/share/man/man5/make.conf.5
+++ b/share/man/man5/make.conf.5
@@ -185,7 +185,7 @@ is strongly discouraged.
 .It Va DEBUG_FLAGS
 .Pq Vt str
 Similar to
-.Va WOLRD_CFLAGS
+.Va WORLD_CFLAGS
 but it will cause
 .Va STRIP
 to be set to a blank value, if set.
