cpdup - Enhance -X operation
* Enhance -X operation.  When the cpignore file is specified as an
  absolute path, it may contain wildcards which match against the
  concatenated source path and directory element (as specified in the
  source), instead of just match against directory elements.

* Thus an absolute cpignore file may contain full paths and wildcards.
  For example, if you:

  cpdup -X $cwd/mycpignore /tmp /fubar

  And $cwd/mycpignore (specified with an absolute path) contains:

      /tmp/xyz/swap*

  Then cpdup will not copy files that match against /tmp/xyz/swap*.

  If you specify a relative path for the cpignore file, or use the
  -x option (instead of -X cpignorefile), operation remains as before
  and only matches against the directory element.

--- a/bin/cpdup/cpdup.1
+++ b/bin/cpdup/cpdup.1
@@ -248,6 +248,16 @@ Works the same as
 but allows you to specify the name of the exclusion file.  This file is
 automatically excluded from the copy.  Only one exclusion file may be
 specified.
+.Pp
+When an absolute path is used, the same exclusive file is read for
+every directory and may contain full paths or wildcarded paths based
+on the full source path as specified on the cpdup command line.
+.Pp
+When a relative path is used (or
+.Fl x
+is specified), the exclusion file is only applicable to the directory
+it resides in and only path elements (the directory elements) are matched
+against it.
 .El
 .Sh REMOTE COPYING
 .Nm
