--- a/share/man/man5/make.conf.5
+++ b/share/man/man5/make.conf.5
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man5/make.conf.5,v 1.12.2.30 2003/05/18 17:05:55 brueffer Exp $
 .\"
-.Dd November 18, 2017
+.Dd January 28, 2018
 .Dt MAKE.CONF 5
 .Os
 .Sh NAME
@@ -519,6 +519,18 @@ userland.
 It has to be accompanied by
 .Dv NETGRAPH7*
 options in the kernel.
+.El
+.Pp
+The following list provides a name and short description for variables
+that are used when performing various audit builds.
+.Bl -tag -width Ar
+.It Va FORMAT_AUDIT
+Enable extra format checking related warnings.
+.It Va WARNS_AUDIT
+Include skipped or moved warning flags for a given
+.Va WARNS
+level in the
+.Pa makefiles .
 .El
 .Pp
 The following list provides a name and short description for variables
