newsyslog.8: Comment out /etc/newsyslog.conf.d for now.

--- a/usr.sbin/newsyslog/newsyslog.8
+++ b/usr.sbin/newsyslog/newsyslog.8
@@ -264,9 +264,9 @@ will examine all files listed in the configuration file.
 .It Pa /etc/newsyslog.conf
 .Nm
 configuration file
-.It Pa /etc/newsyslog.conf.d
-Each file in this directory will be included by the default
-.Pa newsyslog.conf .
+.\".It Pa /etc/newsyslog.conf.d
+.\"Each file in this directory will be included by the default
+.\".Pa newsyslog.conf .
 .It Pa /usr/local/etc/newsyslog.conf.d
 Each file in this directory will be included by the default
 .Pa newsyslog.conf .
