newsyslog(8): Comment out zstd support for now.

--- a/usr.sbin/newsyslog/newsyslog.conf.5
+++ b/usr.sbin/newsyslog/newsyslog.conf.5
@@ -326,12 +326,12 @@ indicates that
 should attempt to save disk space by compressing the rotated
 log file using
 .Xr xz 1 .
-.It Cm Y
-indicates that
-.Xr newsyslog 8
-should attempt to save disk space by compressing the rotated
-log file using
-.Xr zstd 1 .
+.\".It Cm Y
+.\"indicates that
+.\".Xr newsyslog 8
+.\"should attempt to save disk space by compressing the rotated
+.\"log file using
+.\".Xr zstd 1 .
 .It Cm Z
 indicates that
 .Xr newsyslog 8
