--- a/usr.sbin/devinfo/devinfo.8
+++ b/usr.sbin/devinfo/devinfo.8
@@ -26,7 +26,7 @@
 .\"
 .\" $FreeBSD: src/usr.sbin/devinfo/devinfo.8,v 1.9 2006/09/29 16:46:01 ru Exp $
 .\"
-.Dd August 3, 2015
+.Dd February 6, 2018
 .Dt DEVINFO 8
 .Os
 .Sh NAME
@@ -58,8 +58,10 @@ set of system resources by usage and available resources.
 I.e., it lists all
 the IRQ consumers together.
 .It Fl v
-Display all devices in the driver tree, not just those that are attached or
-busy.
+Display all enabled devices in the driver tree, not just those that are
+attached or busy.
+Specify this flag twice, to also display all disabled devices in the driver
+tree.
 Without this flag, only those devices that have attached are reported.
 .El
 .Sh SEE ALSO
