gpt - Add a new directive called 'init'
* Add a new directive called 'init'.  This directive works like
  gpt create except it will also create a msdos slice 0 (and newfs_msdos
  it), and a "DragonFly Label64" slice 1, and
  'disklabel -r -w <slice1> auto'.

* If -B is also specified, the init directive will populate the msdos
  filesystem with efi/boot/bootx64.efi, and also supplies -B to the
  disklabel command.

* This command does not create the boot, swap, or root filesystem
  partitions in the disklabel.  It is meant to do something similar
  to what fdisk -IB used to do for us for legacy partitions (though
  I should note that fdisk -IB didn't initialize a new disklabel).  But
  we do for gpt.

--- a/sbin/gpt/gpt.8
+++ b/sbin/gpt/gpt.8
@@ -236,6 +236,27 @@ The
 option instructs
 .Nm
 to destroy the table in a way that it can be recovered.
+.\" ==== init ====
+.It Nm Ic init Fl f Oo Fl B Oc Ar device ...
+The
+.Ic init
+command allows the user to create a new GPT similar
+to the create command, but will also populate it with
+a boot slice (s0) and a
+.Dx
+slice (s1).
+The boot slice will be dos-formatted.
+The disklabel will be left empty and ready to edit.
+.Pp
+Due to the destructive nature of this directive, the
+.Fl f
+option must also be specified.
+.Pp
+If the
+.Fl B
+option is specified, /boot/bootx64.efi will be copied into
+the msdos slice (s0), and the disklabel will be initialized
+with -B in addition to the normal -r -w.
 .\" ==== label ====
 .It Xo
 .Nm
