kernel/u4b: Some additional work for the recent cdce(4) addition.
* Add a manual page from FreeBSD.

* Add to LINT64.

* Adjust devd(8) configuration so that cdce.ko automatically loads upon
  plugging.

--- a/share/man/man4/ipheth.4
+++ b/share/man/man4/ipheth.4
@@ -27,7 +27,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/ipheth.4 272294 2014-09-30 05:36:16Z gavin $
 .\"
-.Dd November 10, 2014
+.Dd February 22, 2018
 .Dt IPHETH 4
 .Os
 .Sh NAME
@@ -75,7 +75,7 @@ Apple iPad tethering (all models)
 .El
 .Sh SEE ALSO
 .Xr arp 4 ,
-.\".Xr cdce 4 ,
+.Xr cdce 4 ,
 .Xr intro 4 ,
 .Xr netintro 4 ,
 .Xr urndis 4 ,
