--- a/share/man/man4/urndis.4
+++ b/share/man/man4/urndis.4
@@ -29,7 +29,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/urndis.4 264731 2014-04-21 16:35:19Z gjb $
 .\"
-.Dd July 7, 2014
+.Dd February 22, 2018
 .Dt URNDIS 4
 .Os
 .Sh NAME
@@ -70,6 +70,8 @@ For more information on configuring this device, see
 .Xr ifconfig 8 .
 .Sh SEE ALSO
 .Xr arp 4 ,
+.Xr cdce 4 ,
+.Xr ipheth 4 ,
 .Xr netintro 4 ,
 .Xr usb 4 ,
 .Xr ifconfig 8
