--- a/share/man/man4/usb.4
+++ b/share/man/man4/usb.4
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/usb.4 258618 2013-11-26 07:52:40Z lwhsu $
 .\"
-.Dd December 6, 2014
+.Dd February 22, 2018
 .Dt USB 4
 .Os
 .Sh NAME
@@ -102,6 +102,8 @@ ADMtek AN986 Pegasus Ethernet driver
 ASIX Electronics AX88x7x/760 USB Ethernet driver
 .It Xr axge 4
 ASIX Electronics AX88178A/AX88179 USB Gigabit Ethernet driver
+.It Xr cdce 4
+USB Communication Device Class Ethernet driver
 .It Xr cue 4
 CATC USB-EL1210A Ethernet driver
 .It Xr ipheth 4
@@ -265,6 +267,7 @@ specifications can be found at:
 .Xr aue 4 ,
 .Xr axe 4 ,
 .Xr axge 4 ,
+.Xr cdce 4 ,
 .Xr cue 4 ,
 .Xr ehci 4 ,
 .Xr ipheth 4 ,
