--- a/lib/libc/stdio/fopen.3
+++ b/lib/libc/stdio/fopen.3
@@ -31,9 +31,8 @@
 .\"
 .\"     @(#)fopen.3	8.1 (Berkeley) 6/4/93
 .\" $FreeBSD: src/lib/libc/stdio/fopen.3,v 1.20 2007/01/09 00:28:06 imp Exp $
-.\" $DragonFly: src/lib/libc/stdio/fopen.3,v 1.4 2007/04/04 18:36:55 swildner Exp $
 .\"
-.Dd June 8, 2004
+.Dd February 22, 2018
 .Dt FOPEN 3
 .Os
 .Sh NAME
@@ -50,7 +49,7 @@
 .Ft FILE *
 .Fn fdopen "int fildes" "const char *mode"
 .Ft FILE *
-.Fn freopen "const char *path" "const char *mode" "FILE *stream"
+.Fn freopen "const char * restrict path" "const char * restrict mode" "FILE * restrict stream"
 .Sh DESCRIPTION
 The
 .Fn fopen
