--- a/lib/libc/string/string.3
+++ b/lib/libc/string/string.3
@@ -29,14 +29,15 @@
 .\"
 .\"     @(#)string.3	8.2 (Berkeley) 12/11/93
 .\" $FreeBSD: src/lib/libc/string/string.3,v 1.14 2007/01/09 00:28:12 imp Exp $
-.\" $DragonFly: src/lib/libc/string/string.3,v 1.2 2003/06/17 04:26:46 dillon Exp $
 .\"
-.Dd December 11, 1993
+.Dd February 22, 2018
 .Dt STRING 3
 .Os
 .Sh NAME
 .Nm stpcpy ,
+.Nm stpncpy ,
 .Nm strcat ,
+.Nm strlcat ,
 .Nm strncat ,
 .Nm strchr ,
 .Nm strrchr ,
@@ -45,6 +46,7 @@
 .Nm strcasecmp ,
 .Nm strncasecmp ,
 .Nm strcpy ,
+.Nm strlcpy ,
 .Nm strncpy ,
 .Nm strerror ,
 .Nm strlen ,
@@ -62,11 +64,15 @@
 .Sh SYNOPSIS
 .In string.h
 .Ft char *
-.Fn stpcpy "char *dst" "const char *src"
+.Fn stpcpy "char * restrict dst" "const char * restrict src"
 .Ft char *
-.Fn strcat "char *s" "const char * append"
+.Fn stpncpy "char * restrict dst" "const char * restrict src" "size_t count"
 .Ft char *
-.Fn strncat "char *s" "const char *append" "size_t count"
+.Fn strcat "char * restrict s" "const char * restrict append"
+.Ft char *
+.Fn strlcat "char * restrict dst" "const char * restrict src" "size_t count"
+.Ft char *
+.Fn strncat "char * restrict s" "const char * restrict append" "size_t count"
 .Ft char *
 .Fn strchr "const char *s" "int c"
 .Ft char *
@@ -80,9 +86,11 @@
 .Ft int
 .Fn strncasecmp "const char *s1" "const char *s2" "size_t count"
 .Ft char *
-.Fn strcpy "char *dst" "const char *src"
+.Fn strcpy "char * restrict dst" "const char * restrict src"
 .Ft char *
-.Fn strncpy "char *dst" "const char *src" "size_t count"
+.Fn strlcpy "char * restrict dst" "const char * restrict src" "size_t count"
+.Ft char *
+.Fn strncpy "char * restrict dst" "const char * restrict src" "size_t count"
 .Ft char *
 .Fn strerror "int errno"
 .Ft size_t
@@ -98,7 +106,9 @@
 .Ft char *
 .Fn strstr "const char *big" "const char *little"
 .Ft char *
-.Fn strtok "char *s" "const char *delim"
+.Fn strtok "char * restrict s" "const char *restrict delim"
+.Ft char *
+.Fn strtok_r "char * restrict s" "const char *restrict delim" "char ** restrict last"
 .Ft char *
 .Fn index "const char *s" "int c"
 .Ft char *
@@ -121,6 +131,7 @@ for size limitations.
 .Xr index 3 ,
 .Xr rindex 3 ,
 .Xr stpcpy 3 ,
+.Xr stpncpy 3 ,
 .Xr strcasecmp 3 ,
 .Xr strcat 3 ,
 .Xr strchr 3 ,
@@ -128,13 +139,16 @@ for size limitations.
 .Xr strcpy 3 ,
 .Xr strcspn 3 ,
 .Xr strerror 3 ,
+.Xr strlcat 3 ,
+.Xr strlcpy 3 ,
 .Xr strlen 3 ,
 .Xr strpbrk 3 ,
 .Xr strrchr 3 ,
 .Xr strsep 3 ,
 .Xr strspn 3 ,
 .Xr strstr 3 ,
-.Xr strtok 3
+.Xr strtok 3 ,
+.Xr strtok_r 3
 .Sh STANDARDS
 The
 .Fn strcat ,
