--- a/lib/libpthread/pthread_mutex_init.3
+++ b/lib/libpthread/pthread_mutex_init.3
@@ -27,7 +27,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man3/pthread_mutex_init.3,v 1.18 2007/10/22 10:08:00 ru Exp $
 .\"
-.Dd July 10, 2009
+.Dd February 22, 2018
 .Dt PTHREAD_MUTEX_INIT 3
 .Os
 .Sh NAME
@@ -38,7 +38,7 @@
 .Sh SYNOPSIS
 .In pthread.h
 .Ft int
-.Fn pthread_mutex_init "pthread_mutex_t *mutex" "const pthread_mutexattr_t *attr"
+.Fn pthread_mutex_init "pthread_mutex_t * restrict mutex" "const pthread_mutexattr_t * restrict attr"
 .Sh DESCRIPTION
 The
 .Fn pthread_mutex_init
