--- a/lib/libpthread/pthread_mutex_timedlock.3
+++ b/lib/libpthread/pthread_mutex_timedlock.3
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man3/pthread_mutex_timedlock.3,v 1.6 2007/10/22 10:08:00 ru Exp $
 .\"
-.Dd July 10, 2009
+.Dd February 22, 2018
 .Dt PTHREAD_MUTEX_TIMEDLOCK 3
 .Os
 .Sh NAME
@@ -36,7 +36,7 @@
 .In pthread.h
 .In time.h
 .Ft int
-.Fn pthread_mutex_timedlock "pthread_mutex_t *mutex" "const struct timespec *abs_timeout"
+.Fn pthread_mutex_timedlock "pthread_mutex_t * restrict mutex" "const struct timespec * restrict abs_timeout"
 .Sh DESCRIPTION
 The
 .Fn pthread_mutex_timedlock
